crates/otterjs/tests/snapshots/cli_diagnostic__js_undefined_member_access.snap
---
source: crates/otterjs/tests/cli_diagnostic.rs
description: "TypeError underline lands on `x.foo`, all 3 frames present"
expression: stderr
---

  × TypeError: Cannot read properties of null or undefined
  │     at inner (file://<TMPDIR>/fixture.js:3:10)
  │     at outer (file://<TMPDIR>/fixture.js:6:3)
  │     at file://<TMPDIR>/fixture.js:8:1
   ╭─[file://<TMPDIR>/fixture.js:3:10]
 2 │   let x;
 3 │   return x.foo;
   ·          ┬
   ·          ╰── thrown here
 4 │ }
   ╰────
